<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/LinLay">

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/Creators">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"
            android:text="@string/button_creator"
            android:id="@+id/crButton">
        </RadioButton>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/textView_creator"
            android:id="@+id/crTextView">
        </RadioButton>

        <RadioButton
            android:id="@+id/crEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editText_creator"></RadioButton>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Name"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fadeScrollbars="true"
            android:hint="@string/Name"></EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/btnCreate">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/btnClear">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="483dp"
        android:orientation="vertical">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/LinLay"
            android:layout_alignTop="@id/llMain"
            android:layout_alignEnd="@id/LinLay"
            android:layout_alignBottom="@id/LinLay"
            android:text="@string/Save"
            tools:ignore="NotSibling">

        </Button>

    </RelativeLayout>


</LinearLayout>